# microscopeControl

./: .gitignore  Motor_trial.ino  MyScope_z.cfg  README.md  autofocus.py  servo.ino  stepper_motor.ino  wait_to_use.ino  z_axis.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/Archived/ArduinoFilterAdapter/: Makefile.am
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/ArduinoFilterAdapter/: ArduinoFilter.cpp  ArduinoFilter.h
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/Filterwheel/: Filterwheel.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/Firmware/: Firmware.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/Ludl_mod_ArduinoFilterwheel/: Ludl_mod_ArduinoFilterwheel.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/MM_vLStep_XY_Stepper/: MM_vLStep_XY_Stepper.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/MM_vLStep_XY_Stepper_StateDefined/: MM_vLStep_XY_Stepper_StateDefined.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/MM_vLStep_XY_Stepper_TestWithLight/: MM_vLStep_XY_Stepper_TestWithLight.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/MM_vLStep_Z_Stepper/: MM_vLStep_Z_Stepper.ino
Micromanager/MM_CustomArduino-master_forkedFromMicromanager/XY_step/: XY_step.ino
Micromanager/Micromanager_Firmware_test/: Micromanager_Firmware.ino
PythonCodesPlanB/: PythonImageCaptureTest.py
Python_command/: TestingExposure.py
Samples/: LaplacianTest.py
(+14 files in other folders)
