
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_ArduinoFilter.la
libmmgr_dal_ArduinoFilter_la_SOURCES = ArduinoFilter.cpp ArduinoFilter.h
libmmgr_dal_ArduinoFilter_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_ArduinoFilter_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = license.txt